<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ImplicitActivity"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <EditText
        android:id="@+id/web_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/website"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/web_button"
        android:text = "@string/open_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/location_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/location_button"
        android:text = "@string/open_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/share_text_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/share_text_button"
        android:text = "@string/share_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_marginTop="30dp"
        android:text="@string/take_a_picture"
        android:id="@+id/picture_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
    </ScrollView>
</LinearLayout>